--- a/index.html
+++ b/index.html
@@ -42,28 +42,28 @@
         <script>
             "use strict";
             (function() {
-                // get the "username" input
+
                 var coffeeInput = document.forms.add.coffee;
                 var roastInput = document.forms.add.roast;
 
-                // log the value of the "username" input
+
                 console.log(toString(coffeeInput),toString(roastInput))
              // addCoffee(coffeeInput,roastInput)
             })();
         </script>
 
-<!--        <form name="add">-->
+        <form name="add">
 
-<!--            <select id="coffee-roast">-->
+            <select id="coffee-roast">
 
-<!--                <option>Light</option>-->
-<!--                <option>Medium</option>-->
-<!--                <option>Dark</option>-->
-<!--            </select>-->
+                <option>Light</option>
+                <option>Medium</option>
+                <option>Dark</option>
+            </select>
 
-<!--            <input id="coffeename" type="text" placeholder="Coffee-name">-->
-<!--            <input id="addCoffee" type="submit" />-->
-<!--        </form>-->
+            <input id="coffeename" type="text" placeholder="Coffee-name">
+            <input id="addCoffee" type="submit" />
+        </form>
 
     </div>
 <!--  Array display for coffee + roast  -->
