--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h2> test 123</h2>
     <h1 class="text-center">Coffee!</h1>
     <span class="d-sm-inline"><hr></span>
 <!--  Code for Sorting out the Roasts  -->
@@ -15,18 +14,24 @@
         <form>
             <label for="roast-selection"></label>
             <select id="roast-selection">
+                <option>all</option>
                 <option>light</option>
                 <option>medium</option>
                 <option>dark</option>
             </select>
-
-            <input id="submit" type="submit" />
+            <div>
+                <label for="searchBox">coffee Name</label>
+                <input id="searchBox" name="coffeeSort" type="text">
+            </div>
+            <div>
+                <input id="submit" type="submit" />
+            </div>
         </form>
     </div>
-
+    <span class="d-sm-inline"><hr></span>
+    <h1 class="coffee1">Add A Coffee!</h1>
 <!-- Code for adding Coffees to array   -->
     <div class="form1">
-
         <form name="add">
             <div>
                 <label for="add-coffee">Coffee name</label>
@@ -34,26 +39,18 @@
             </div>
             <div>
                 <label for="add-roast">Roast type</label>
-                <input id="add-roast" name="roast" type="text">
+                <select id="add-roast">
+                    <option>light</option>
+                    <option>medium</option>
+                    <option>dark</option>
+                </select>
             </div>
             <div>
                 <input id="submit2" type="submit">
             </div>
         </form>
-        <form name="add">
-
-            <select id="coffee-roast">
-
-                <option>Light</option>
-                <option>Medium</option>
-                <option>Dark</option>
-            </select>
-
-            <input id="coffeename" type="text" placeholder="Coffee-name">
-            <input id="addCoffee" type="submit" />
-        </form>
-
     </div>
+
 <!--  Array display for coffee + roast  -->
 <div class="array1">
     <table>
